--- a/2.透视相机和视椎体/index.html
+++ b/2.透视相机和视椎体/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,17 +10,15 @@
         }
     </style>
 </head>
-
 <body>
     <script type="importmap">
-        {
-            "imports": {
-                "three": "https://esm.sh/three@0.174.0/build/three.module.js"
-            }   
+    {
+        "imports": {
+            "three": "https://esm.sh/three@0.174.0/build/three.module.js",
+            "three/addons/": "https://esm.sh/three@0.174.0/examples/jsm/"
         }
-        </script>
-    <script type="module" src="./index.js">
+    }
     </script>
+    <script type="module" src="./index.js"></script>
 </body>
-
 </html>
